@@ -66,6 +66,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #26227: On Windows, getnameinfo(), gethostbyaddr() and
+  gethostbyname_ex() functions of the socket module now decode the hostname
+  from the ANSI code page rather than UTF-8.
+
 - Issue #26147: xmlrpc now works with strings not encodable with used
   non-UTF-8 encoding.
 
